--- a/nosotros.html
+++ b/nosotros.html
@@ -38,31 +38,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 				</button>
 				<div class="navbar navbar-brand navbar-left">
-					<img src="images\logo2.png" alt="rotaract logo" class="img-responsive">
+					<img src="images/logo2.png" alt="rotaract logo" class="img-responsive">
 				</div>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 				<nav class="link-effect-2" id="link-effect-2">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="index.html"><span data-hover="Inicio">Inicio</span></a></li>
-						<li class="dropdown">
+						<li><a href="index.html"><span data-hover="Inicio">Inicio</span></a></li>
+						<li class="dropdown active">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span data-hover="Institución">Institución</span><b class="caret"></b> </a>
 							<ul class="dropdown-menu agile_short_dropdown">
 								<li><a href="rotaract.html">Rotaract</a></li>
-								<!--TODO Agregar las paginas faltantes-->
 								<li><a href="nosotros.html">Nuestro Club</a></li>
 								<li><a href="directorio.html">Directorio</a></li>
 							</ul>
 						</li>
-						<li><a href="activities.html"><span data-hover="Services">Services</span></a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span data-hover="Short Codes">Short Codes</span> <b class="caret"></b></a>
-							<ul class="dropdown-menu agile_short_dropdown">
-								<li><a href="icons.html">Web Icons</a></li>
-								<li><a href="typography.html">Typography</a></li>
-							</ul>
-						</li>
+						<li><a href="activities.html"><span data-hover="Services">Actividades</span></a></li>
 						<li><a href="mail.html"><span data-hover="Contacto">Contacto</span></a></li>
 					</ul>
 				</nav>
@@ -89,9 +81,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agile_team_grid_right">
 					<h3>Acerca de <span>Rotaract Club Grigotá</span></h3>
 					<p>El Rotaract Club Grigotá es el club más antiguo del departemento de Santa Cruz con actividad ininterrumpida por 23 años,
-                        desde su fundación el 1 de Octubre de 1995, es también el club con mayor número de socios en el distrito y entre
-                        los más numerosos a nivel mundial. El Club cuenta con un notable desarrollo de proyectos sociales y actividades
-                        realizadas en el que se han visto beneficiadas cantidades de personas de los niveles más desfavorecidos de nuestra comunidad.</p>
+                        desde su fundación el 1 de Octubre de 1995, es también uno de los clubes con mayor número de socios en el distrito.
+                        El Club cuenta con un notable desarrollo de proyectos sociales y actividades realizadas en el que se han visto
+                        beneficiadas cantidades de personas de los niveles más desfavorecidos de nuestra comunidad.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -101,8 +93,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
                 </div>
                 <div class="w3_agile_team_grid_right">
-                    <h3><span>Misión </span>y <span>Visión</span></h3>
-                    <p>Además de compartir la filosofía rotaria, nuestro club ha desarrollado su propia misión y visión</p>
+                    <!--<h3><span>Misión </span>y <span>Visión</span></h3>
+                    <p>Además de compartir la filosofía rotaria, nuestro club ha desarrollado su propia misión y visión</p>-->
                 <div class="agileits_w3layouts_team_grids">
                     <div class="col-md-12 w3_agileits_services1_grid">
                         <div class="w3_agileits_services1_grid1">
@@ -136,7 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				con soluciones innovadoras.</p>
 			<div class="w3l_more">
 				<a href="#" class="button button--nina agileits_button" data-text="Leer mas" data-toggle="modal" data-target="#myModal">
-					<span>L</span><span>e</span><span>e</span><span>r</span><span>m</span><span>a</span><span>s</span>
+					<span>L</span><span>e</span><span>e</span><span>r</span> <span>m</span><span>a</span><span>s</span>
 				</a>
 			</div>
 		</div>
@@ -153,14 +145,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<section>
 					<div class="modal-body">
 						<img src="images/10.jpg" alt=" " class="img-responsive" />
-						<p>Ut enim ad minima veniam, quis nostrum 
-							exercitationem ullam corporis suscipit laboriosam, 
-							nisi ut aliquid ex ea commodi consequatur? Quis autem 
-							vel eum iure reprehenderit qui in ea voluptate velit 
-							esse quam nihil molestiae consequatur, vel illum qui 
-							dolorem eum fugiat quo voluptas nulla pariatur.
-							<i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
-								esse quam nihil molestiae consequatur.</i></p>
+						<p>Rotaract, más que una institución,
+							es una escuela de líderes, donde además de la oportunidad
+                            de desarrollarte profesionalmente, adquieres muchas habilidades
+                            que te ayudarán en la vida, y al ser una institución mundial
+                            llegas a tener una familia en cada lugar nuevo al que vayas. Haz del
+                            servicio un estilo de vida
+							<i>" Quien no vive para servir, no sirve
+								para vivir.</i></p>
 					</div>
 				</section>
 			</div>
