--- a/nosotros.html
+++ b/nosotros.html
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             llegas a tener una familia en cada lugar nuevo al que vayas. Haz del
                             servicio un estilo de vida
 							<i>" Quien no vive para servir, no sirve
-								para vivir.</i></p>
+								para vivir. "</i></p>
 					</div>
 				</section>
 			</div>
